@@ -1,0 +1,219 @@
+personal_ws-1.1 en 0
+AE
+afivepaper
+afourlatex
+afourpaper
+afourwide
+allowcodebreaks
+appendixsec
+appendixsection
+appendixsubsec
+appendixsubsection
+appendixsubsubsec
+appendixsubsubsection
+asis
+atchar
+backslashchar
+backtick
+centerchap
+chapheading
+cindex
+clicksequence
+clickstyle
+cmbx
+cmd
+cmsl
+cmti
+codequotebacktick
+codequoteundirected
+Comput
+datatype
+defcmdname
+defcodeindex
+defcv
+deffn
+defindex
+definfoenclose
+defivar
+defmac
+defmethod
+defopt
+defspec
+deftp
+deftypecv
+deftypefn
+deftypefnnewline
+deftypefun
+deftypeivar
+deftypemethod
+deftypeop
+deftypevar
+deftypevr
+defvr
+delimchar
+detailmenu
+dfn
+dircategory
+direntry
+dmn
+docbook
+documentdescription
+documentlanguage
+dotaccent
+ecrm
+emph
+enddots
+env
+envname
+errormsg
+exampleindent
+exclamdown
+exdent
+feybr
+finalout
+findex
+firstparagraphindent
+fonttextsize
+footnotestyle
+frenchspacing
+ftable
+geq
+guillemetleft
+guillemetright
+guillemotleft
+guillemotright
+guilsinglleft
+guilsinglright
+hacek
+hashchar
+headitem
+headitemfont
+hy
+ifclear
+ifcommanddefined
+ifcommandnotdefined
+ifdocbook
+ifhtml
+ifinfo
+ifnot
+ifnotdocbook
+ifnothtml
+ifnotinfo
+ifnotplaintext
+ifnottex
+ifnotxml
+ifplaintext
+ifset
+iftex
+ifxml
+indentedblock
+indicateurl
+inforef
+inlinefmt
+inlinefmtifelse
+inlineifclear
+inlineifset
+inlineraw
+insertcopying
+itemx
+kbd
+kbdinputstyle
+kindex
+koi
+lbracechar
+leq
+listoffloats
+locator
+lowersections
+macroname
+majorheading
+metasyntactic
+msg
+multitable
+multitables
+Multiword
+newcmd
+newidx
+noindent
+novalidate
+oo
+ordf
+pagesizes
+paragraphindent
+params
+phen
+pindex
+printindex
+pxref
+questiondown
+quotedblbase
+quotedblleft
+quotedblright
+quoteleft
+quoteright
+quotesinglbase
+raisesections
+rbracechar
+rebroken
+registeredsymbol
+RET
+ringaccent
+samp
+sansserif
+sc
+screenful
+setchapternewpage
+setcontentsaftertitlepage
+setfilename
+setshortcontentsaftertitlepage
+settitle
+shortcaption
+shortcontents
+shorttitlepage
+smallbook
+smalldisplay
+smallexample
+smallformat
+smallindentedblock
+smalllisp
+smallquotation
+Solimeno
+sp
+SPC
+ss
+subsubheading
+summarycontents
+syncodeindex
+synindex
+texi
+texinfo
+textdegree
+thischapter
+thischaptername
+thischapternum
+thisfile
+thispage
+thistitle
+tieaccent
+tindex
+titlefont
+titlepage
+txi
+txicommandconditionals
+ubaraccent
+udotaccent
+Undefine
+underbar
+underdot
+unmacro
+unnumberedsec
+unnumberedsubsec
+unnumberedsubsubsec
+uref
+urefbreakstyle
+verbatiminclude
+vindex
+vtable
+xml
+xrefautomaticsectiontitle
+zet
